шаг 8 (бэк)
